--- a/_layouts/comingsoon.html
+++ b/_layouts/comingsoon.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
+
 <style>
 body, html {
   height: 100%;
@@ -7,7 +9,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('https://img.freepik.com/free-photo/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall_1258-28312.jpg?w=1380&t=st=1676052185~exp=1676052785~hmac=b3ce7fb064522d4ede9182936c525a6d14882644b2e966e129de6357656a965b');
+  background-image: url('{{ site.baseurl }}/assets/images/bg.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
@@ -53,4 +55,3 @@ hr {
 </div>
 
 </body>
-</html>
