--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
-    <h1>Within the frame default</h1>
+    {% include head.html %}
     {{ content }}
-    <body>
-    </body>
 </html>
