--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,60 +1,37 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
-        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-      </a>
-  
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-  
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item">
-          Home
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand px-5 py-2">
+    <p class="navbar-item is-size-4 has-text-dark has-text-weight-bold">
+      <span class="has-text-danger">JPAWiTRO</span>
+      .space
+    </p>
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div id="navMenu" class="navbar-menu">
+    <div class="navbar-end px-5 py-2">
+      <div class="navbar-item">
+        <a class="button is-black block is-ahref has-text-white" target="_blank" href="" disabled>
+          Projects
         </a>
-  
-        <a class="navbar-item">
-          Documentation
-        </a>
-  
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            More
-          </a>
-  
-          <div class="navbar-dropdown">
-            <a class="navbar-item">
-              About
-            </a>
-            <a class="navbar-item">
-              Jobs
-            </a>
-            <a class="navbar-item">
-              Contact
-            </a>
-            <hr class="navbar-divider">
-            <a class="navbar-item">
-              Report an issue
-            </a>
-          </div>
-        </div>
       </div>
-  
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
+      <div class="navbar-item">
+        <a class="button is-black block is-ahref has-text-white" target="_blank" href="" disabled>
+          Blog
+        </a>
+      </div>
+      <div class="navbar-item">
+        <a class="button is-black block is-ahref has-text-white" target="_blank" href="" disabled>
+          2-Dimensional
+        </a>
+      </div>
+      <div class="navbar-item">
+        <a class="button is-black block is-ahref has-text-white" target="_blank" href="https://t.me/pakjoko_bot">
+          Contact
+        </a>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
