--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<section class="hero is-black is-fullheight has-text-centered">
+<section class="hero is-black has-background-gradient is-fullheight has-text-centered">
     {% include navbar.html %}
     <div class="hero-body">
         <div class="container">
