--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -20,11 +20,11 @@
                 </p>
             </a>
             <div class="container">
-                <a href="http://github.com/{{ site.github_username }}" target="_blank"><i class="fab fa-github fa-2x icon is-large"></i></a>
-                <a href="http://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fab fa-twitter fa-2x icon is-large"></i></a>
-                <a href="http://linkedin.com/{{ site.linkedin_username }}" target="_blank"><i class="fab fa-linkedin-in fa-2x icon is-large"></i></a>
-                <a href="http://instagram.com/{{ site.instagram_username }}" target="_blank"><i class="fab fa-instagram fa-2x icon is-large"></i></a>
-                <a href="http://youtube.com/{{ site.youtube_username }}" target="_blank"><i class="fab fa-youtube fa-2x icon is-large"></i></a>
+                <a href="http://github.com/{{ site.social.github }}" target="_blank"><i class="fab fa-github fa-2x icon is-large"></i></a>
+                <a href="http://twitter.com/{{ site.social.twitter }}" target="_blank"><i class="fab fa-twitter fa-2x icon is-large"></i></a>
+                <a href="http://linkedin.com/{{ site.social.linkedin }}" target="_blank"><i class="fab fa-linkedin-in fa-2x icon is-large"></i></a>
+                <a href="http://instagram.com/{{ site.social.instagram }}" target="_blank"><i class="fab fa-instagram fa-2x icon is-large"></i></a>
+                <a href="http://youtube.com/{{ site.social.youtube }}" target="_blank"><i class="fab fa-youtube fa-2x icon is-large"></i></a>
             </div>
         </div>
     </div>
