--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand px-5 py-2">
     <p class="navbar-item is-size-4 has-text-dark has-text-weight-bold">
-      <span class="has-text-danger">JPAWiTRO</span>
+      <span class="has-text-warning">JPAWiTRO</span>
       .space
     </p>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
