--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <a href="http://github.com/{{ site.social.github }}" target="_blank"><i class="fab fa-github fa-2x icon is-large"></i></a>
                 <a href="http://twitter.com/{{ site.social.twitter }}" target="_blank"><i class="fab fa-twitter fa-2x icon is-large"></i></a>
-                <a href="http://linkedin.com/{{ site.social.linkedin }}" target="_blank"><i class="fab fa-linkedin-in fa-2x icon is-large"></i></a>
+                <a href="http://linkedin.com/in/{{ site.social.linkedin }}" target="_blank"><i class="fab fa-linkedin-in fa-2x icon is-large"></i></a>
                 <a href="http://instagram.com/{{ site.social.instagram }}" target="_blank"><i class="fab fa-instagram fa-2x icon is-large"></i></a>
                 <a href="http://youtube.com/{{ site.social.youtube }}" target="_blank"><i class="fab fa-youtube fa-2x icon is-large"></i></a>
             </div>
