--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,4 +3,5 @@ layout : default
 ---
 {% include hero.html %}
 {% include about.html%}
-{% include occupation.html %}
+{% include occupations.html %}
+{% include highlights.html %}
