--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,4 +4,4 @@ layout : default
 {% include hero.html %}
 {% include about.html%}
 {% include occupations.html %}
-{% include highlights.html %}
+<!-- {% include highlights.html %} -->
