--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-black-bis is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand px-5 py-2">
     <p class="navbar-item is-size-4 has-text-dark has-text-weight-bold">
       <span class="has-text-warning">JPAWiTRO</span>
@@ -13,22 +13,22 @@
   <div id="navMenu" class="navbar-menu">
     <div class="navbar-end px-5 py-2">
       <div class="navbar-item">
-        <a class="button is-black block is-ahref has-text-white" target="_blank" href="" disabled>
+        <a class="button is-ghost has-background-black-bis block is-ahref has-text-grey" target="_blank" href="">
           Projects
         </a>
       </div>
       <div class="navbar-item">
-        <a class="button is-black block is-ahref has-text-white" target="_blank" href="" disabled>
+        <a class="button is-ghost has-background-black-bis block is-ahref has-text-grey" target="_blank" href="">
           Blog
         </a>
       </div>
       <div class="navbar-item">
-        <a class="button is-black block is-ahref has-text-white" target="_blank" href="" disabled>
+        <a class="button is-ghost has-background-black-bis block is-ahref has-text-grey" target="_blank" href="">
           2-Dimensional
         </a>
       </div>
       <div class="navbar-item">
-        <a class="button is-black block is-ahref has-text-white" target="_blank" href="https://t.me/pakjoko_bot">
+        <a class="button is-ghost has-background-black-bis block is-ahref has-text-grey" target="_blank" href="https://t.me/pakjoko_bot">
           Contact
         </a>
       </div>
