--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section id="aboutme">
     <div class="hero is-danger is-small has-text-centered p-6 subtitle is-size-3">
         {{ page.content | markdownify }}
-        <div class="is-inline-block has-text-centered">
+<!--         <div class="is-inline-block has-text-centered">
             <p class="control is-inline-block">
                 <button class="button is-warning is-outlined is-rounded">
                 Download Resume
@@ -12,6 +12,6 @@
                 Request Token
                 </button>
             </p>
-        </div>
+        </div> -->
     </div>
 </section>
