--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
       <span aria-hidden="true"></span>
     </a>
   </div>
-  <div id="navMenu" class="navbar-menu">
+<!--   <div id="navMenu" class="navbar-menu">
     <div class="navbar-end px-5 py-2">
       <div class="navbar-item">
         <a class="button is-ghost has-background-black-bis block is-ahref has-text-grey" target="_blank" href="">
@@ -33,5 +33,5 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
 </nav>
